--- a/hobbies.html
+++ b/hobbies.html
@@ -13,6 +13,7 @@
         <li>blog</li>
         <li>cestovanie</li>
         <li>beh</li>
+        <li>turistika</li>
     </ol>
   </body>
 </html>
